syntax = "proto3";

package stats.service.dashboard;

option java_package = "ru.practicum.ewm.stats.grpc";
option java_multiple_files = true;

service RecommendationsController {
  rpc GetRecommendationsForUser(UserPredictionsRequestProto) returns (stream RecommendedEventProto);

  rpc GetSimilarEvents(SimilarEventsRequestProto) returns (stream RecommendedEventProto);

  rpc GetInteractionsCount(InteractionsCountRequestProto) returns (stream RecommendedEventProto);
}

message UserPredictionsRequestProto {
  int64 user_id = 1;
  int32 max_results = 2;
}

message SimilarEventsRequestProto {
  int64 event_id = 1;
  int64 user_id = 2;
  int32 max_results = 3;
}

message InteractionsCountRequestProto {
  repeated int64 event_ids = 1;
}

message RecommendedEventProto {
  int64 event_id = 1;
  double score = 2;
}